Fix misaligned rows

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
 #calc {
   background: rgb(75, 85, 85);
   width: 400px;
-  table-layout: fixed;
   margin: 60px auto 0 auto;
 }
 
@@ -18,6 +17,10 @@ body {
   padding: 5px 20px 0 0;
   font-size: 40px;
   font-weight: 600;
+}
+
+.row {
+  display: flex;
 }
 
 #mem {
@@ -34,8 +37,6 @@ body {
   background: black;
   text-align: center;
   font-weight: 600;
-  vertical-align: middle;
-  display: table-cell;
   border: 2px solid rgb(75, 85, 85);
 }
 
